bk_ida/gccida/c0/consec_sets_giv
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/consec_sets_giv/src/loop.c:7368:4: error: expected ';' after expression
rtx v15; // [rsp+30h] [rbp-90h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/consec_sets_giv/src/loop.c:7368:5: error: use of undeclared identifier 'v15'
rtx v15; // [rsp+30h] [rbp-90h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/consec_sets_giv/src/loop.c:7372:4: error: expected ';' after expression
rtx v19; // [rsp+48h] [rbp-78h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/consec_sets_giv/src/loop.c:7372:5: error: use of undeclared identifier 'v19'
rtx v19; // [rsp+48h] [rbp-78h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/consec_sets_giv/src/loop.c:7373:1: error: use of undeclared identifier 'induction_1'
induction_1 *v; // [rsp+50h] [rbp-70h] 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/consec_sets_giv/src/loop.c:7373:14: error: use of undeclared identifier 'v'
induction_1 *v; // [rsp+50h] [rbp-70h] 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/consec_sets_giv/src/loop.c:7374:4: error: expected ';' after expression
rtx set; // [rsp+58h] [rbp-68h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/consec_sets_giv/src/loop.c:7374:5: error: use of undeclared identifier 'set'
rtx set; // [rsp+58h] [rbp-68h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/consec_sets_giv/src/loop.c:7375:4: error: expected ';' after expression
rtx temp; // [rsp+60h] [rbp-60h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/consec_sets_giv/src/loop.c:7375:5: error: use of undeclared identifier 'temp'
rtx temp; // [rsp+60h] [rbp-60h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/consec_sets_giv/src/loop.c:7377:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+70h] [rbp-50h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/consec_sets_giv/src/loop.c:7381:6: error: use of undeclared identifier 'add_vala'; did you mean 'add_val'?
rtx *add_vala; // [rsp+88h] [rbp-38h] 
     ^~~~~~~~
     add_val
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/consec_sets_giv/src/loop.c:7358:6: note: 'add_val' declared here
rtx *add_val, 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/consec_sets_giv/src/loop.c:7381:5: error: invalid operands to binary expression ('struct rtx_def *' and 'rtx *' (aka 'struct rtx_def **'))
rtx *add_vala; // [rsp+88h] [rbp-38h] 
~~~ ^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/consec_sets_giv/src/loop.c:7382:4: error: expected ';' after expression
rtx dest_rega; // [rsp+90h] [rbp-30h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/consec_sets_giv/src/loop.c:7382:5: error: use of undeclared identifier 'dest_rega'; did you mean 'dest_reg'?
rtx dest_rega; // [rsp+90h] [rbp-30h] 
    ^~~~~~~~~
    dest_reg
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/consec_sets_giv/src/loop.c:7357:5: note: 'dest_reg' declared here
rtx dest_reg, 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/consec_sets_giv/src/loop.c:7383:4: error: expected ';' after expression
rtx src_rega; // [rsp+98h] [rbp-28h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/consec_sets_giv/src/loop.c:7383:5: error: use of undeclared identifier 'src_rega'; did you mean 'src_reg'?
rtx src_rega; // [rsp+98h] [rbp-28h] BYREF 
    ^~~~~~~~
    src_reg
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/consec_sets_giv/src/loop.c:7356:5: note: 'src_reg' declared here
rtx src_reg, 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/consec_sets_giv/src/loop.c:7384:4: error: expected ';' after expression
rtx pa; // [rsp+A0h] [rbp-20h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/consec_sets_giv/src/loop.c:7384:5: error: use of undeclared identifier 'pa'
rtx pa; // [rsp+A0h] [rbp-20h] 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/consec_sets_giv/src/obj/loop.o] Error 1
